<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.sivasankar.java</groupId>
	<artifactId>java-practices</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Java Practices</name>
	<description>Java Maven Multi Module Project for Java Practices</description>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.12</version>
	</parent>

	<properties>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.version>3.8.0</maven.compiler.version>
		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
		<maven.jacoco.version>0.8.5</maven.jacoco.version>
		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
		<maven.javadoc.version>3.2.0</maven.javadoc.version>
		<maven.assembly.version>3.3.0</maven.assembly.version>

		<!-- Data Access -->
		<mysql.connector.version>5.1.46</mysql.connector.version>
		<h2.version>1.4.195</h2.version>
		<postgresql.version>42.2.2</postgresql.version>
		<elasticsearch.version>7.5.2</elasticsearch.version>

		<!-- Lombok -->
		<lombok.version>1.18.8</lombok.version>

		<!--For Security -->
		<bouncycastle.version>1.60</bouncycastle.version>
		<commons.pool>1.6</commons.pool>

		<!-- Support tools & utilities -->
		<commons-math3>3.6.1</commons-math3>
		<commons-lang3>3.7</commons-lang3>
		<commons-io>2.6</commons-io>
		<commons-codec>1.10</commons-codec>
		<commons.beanutils.version>1.9.2</commons.beanutils.version>
		<commons.configuration2.version>2.2</commons.configuration2.version>
		<commons.io.version>2.6</commons.io.version>
		<velocity.version>1.7</velocity.version>
		<velocity.tools.version>2.0</velocity.tools.version>

		<!-- Test & Logging -->
		<logback.version>1.2.3</logback.version>
		<slf4j.version>1.7.19</slf4j.version>
		<commons.codec.version>1.9</commons.codec.version>

		<!-- joda-time -->
		<jodatime.version>2.8.1</jodatime.version>

		<!-- jsch.version -->
		<jsch.version>0.1.55</jsch.version>

		<sonar.coverage.exclusions>**/dto/**
		</sonar.coverage.exclusions>
		<sonar.cpd.exclusions>**/dto/**
		</sonar.cpd.exclusions>

	</properties>

	<modules>
		<module>01-java-7</module>
		<module>02-java-8</module>
		<module>03-java-9</module>
		<module>04-java-10</module>
		<module>05-java-11</module>
	</modules>

	<build>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
					<skip>false</skip>
					<argLine>
						${argLine} --add-opens
						java.xml/jdk.xml.internal=ALL-UNNAMED
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${maven.jacoco.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven.jar.plugin.version}</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Project-Name>${project.name}</Project-Name>
							<Project-Version>${project.version}</Project-Version>
							<Built-By>${user.name}</Built-By>
							<Built-OS>${os.name}</Built-OS>
							<Local-Build-Date>${maven.build.timestamp}</Local-Build-Date>
							<Build-Number>${env.BUILD_NUMBER}</Build-Number>
							<Build-Date>${env.BUILD_ID}</Build-Date>
							<Build-URL>${env.BUILD_URL}</Build-URL>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

		</plugins>

	</build>

</project>